Fix placement of overlay scrollbars on high DPI with box shadow.

CompositedLayerMapping did not position the scrollbar layers correctly when a
non-stacking-context scroller had a box shadow.  Some ancestor clipping
scenarios were also broken.  This patch cleans up the logic and adds comments
and test coverage.

BUG=635722
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2363953002
Cr-Commit-Position: refs/heads/master@{#421058}

Former-commit-id: 509c59b3500ee9d2fb244c23cdc6abf528a5bee0